This fixes the problems of the, "show profile field form fields in closed + invite lists" not actually working.
That's why we test!

--- a/dada/templates/subscription_options_screen.tmpl
+++ b/dada/templates/subscription_options_screen.tmpl
@@ -274,7 +274,7 @@
               name="invites_show_profile_fields_in_subscription_form" 
               id="invites_show_profile_fields_in_subscription_form" 
               value="1" 
-              <!-- tmpl_if invites_show_profile_fields_in_subscription_form -->checked="checked"<!--/tmpl_if--> 
+              <!-- tmpl_if list_settings.invites_show_profile_fields_in_subscription_form -->checked="checked"<!--/tmpl_if--> 
              >
             <label for="invites_show_profile_fields_in_subscription_form">
 				Show all profile fields in closed (invite only), private mailing list invitation subscription forms
