This just aligns the form fields better.

--- a/dada/templates/change_password_screen.tmpl
+++ b/dada/templates/change_password_screen.tmpl
@@ -55,15 +55,20 @@
 
         <!-- tmpl_unless root_login -->
 
-            <div class="row">
-               <div class="small-12 columns">
-                    <label for="old_password">
-                        List Password
-                        <input type="password" id="old_password" name="old_password" maxlength="24" >
-                    </label> 
-                </div> 
-            </div>
-
+		<div class="row">
+			<div class="large-3 medium-3 columns">
+                <label 
+					for="old_password"
+					class="medium-text-right"
+				>
+                    Current List Password
+                </label> 
+            </div> 
+			 <div class="large-9 medium-9 columns">
+				 <input type="password" id="old_password" name="old_password" maxlength="24" >
+		     </div> 
+		 </div>
+		 
         <!--/tmpl_unless-->
 
 	      <div class="row">
