Further support for IMAP for Bounce Handler, this time allowing you to make the config change via the installer. TODO: still is to have check that the necessary module, Net::IMAP::Simple is available

--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -383,6 +383,7 @@ $PLUGINS_ENABLED = {
 $PLUGIN_CONFIGS = { 
 
 	Bounce_Handler => {
+		Connection_Protocol         => <!-- tmpl_var bounce_handler_Connection_Protocol default="'POP3'"-->,
 		Server                      => <!-- tmpl_var bounce_handler_Server default="''"-->,
 		Username                    => <!-- tmpl_var bounce_handler_Username default="''"-->,
 		Password                    => <!-- tmpl_var bounce_handler_Password default="''"-->,
