Google Plus OUT! Instagram IN!

--- a/dada/templates/change_info_screen.tmpl
+++ b/dada/templates/change_info_screen.tmpl
@@ -312,17 +312,17 @@
  	<div class="large-3 medium-3 columns">
  	    <label 
  			class="medium-text-right"
- 			for="google_plus_page_url"
+ 			for="instagram_url"
  		>
-          	Google+ Page URL
+          	Instagram URL
  		</label>
  	</div>
  	<div class="large-9 medium-9 columns">
       	<input 
 			type="text" 
-			name="google_plus_page_url" 
-			id="google_plus_page_url" 
-			value="<!-- tmpl_var list_settings.google_plus_page_url escape="HTML" -->" 
+			name="instagram_url" 
+			id="instagram_url" 
+			value="<!-- tmpl_var list_settings.instagram_url escape="HTML" -->" 
 			placeholder="https://"
 			>
      </div>
